--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
+Cuckoo = "7a007107-3546-4367-9bf5-5a8e4c47b97f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Duff = "3e2ffa6a-ba38-11e8-0a1c-7b69309e1c72"
@@ -17,6 +18,7 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 HierarchicalUtils = "f9ccea15-0695-44b9-8113-df7c26ae4fa9"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JsonGrinder = "d201646e-a9c0-11e8-1063-23b139159713"
 MLDataPattern = "9920b226-0b2a-5f5f-9153-9aa70a013f8b"
