--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
 PrayTools = "083a1e89-a1cc-483a-bb5e-ca7e64a602e0"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 PrintTypesTersely = "41b232b1-0de0-4a65-aab4-126884588aaf"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
