--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Duff = "3e2ffa6a-ba38-11e8-0a1c-7b69309e1c72"
 ExplainMill = "a2c437b0-bf6b-41a1-8a62-162a814afa99"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+GLMNet = "8d5ece8b-de18-5317-b113-243142960cc6"
 HierarchicalUtils = "f9ccea15-0695-44b9-8113-df7c26ae4fa9"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
