--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ JsonGrinder = "d201646e-a9c0-11e8-1063-23b139159713"
 MLDataPattern = "9920b226-0b2a-5f5f-9153-9aa70a013f8b"
 Mill = "1d0525e4-8992-11e8-313c-e310e1f6ddea"
 ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PrayTools = "083a1e89-a1cc-483a-bb5e-ca7e64a602e0"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 PrintTypesTersely = "41b232b1-0de0-4a65-aab4-126884588aaf"
