--- a/Project.toml
+++ b/Project.toml
@@ -19,16 +19,21 @@ GLMNet = "8d5ece8b-de18-5317-b113-243142960cc6"
 HierarchicalUtils = "f9ccea15-0695-44b9-8113-df7c26ae4fa9"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JsonGrinder = "d201646e-a9c0-11e8-1063-23b139159713"
 MLDataPattern = "9920b226-0b2a-5f5f-9153-9aa70a013f8b"
 Mill = "1d0525e4-8992-11e8-313c-e310e1f6ddea"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PrayTools = "083a1e89-a1cc-483a-bb5e-ca7e64a602e0"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 PrintTypesTersely = "41b232b1-0de0-4a65-aab4-126884588aaf"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
