--- a/Project.toml
+++ b/Project.toml
@@ -33,6 +33,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PrayTools = "083a1e89-a1cc-483a-bb5e-ca7e64a602e0"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 PrintTypesTersely = "41b232b1-0de0-4a65-aab4-126884588aaf"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
