--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JsonGrinder = "d201646e-a9c0-11e8-1063-23b139159713"
 MLDataPattern = "9920b226-0b2a-5f5f-9153-9aa70a013f8b"
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Mill = "1d0525e4-8992-11e8-313c-e310e1f6ddea"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
