--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Cuckoo = "7a007107-3546-4367-9bf5-5a8e4c47b97f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Duff = "3e2ffa6a-ba38-11e8-0a1c-7b69309e1c72"
 ExplainMill = "a2c437b0-bf6b-41a1-8a62-162a814afa99"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
