--- a/Project.toml
+++ b/Project.toml
@@ -33,11 +33,13 @@ OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PrayTools = "083a1e89-a1cc-483a-bb5e-ca7e64a602e0"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 PrintTypesTersely = "41b232b1-0de0-4a65-aab4-126884588aaf"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
